ip6tables
# Generated by ip6tables-save v1.4.21 on Sun Feb 19 03:22:10 2017
*mangle
:PREROUTING ACCEPT [65745:12123555]
:INPUT ACCEPT [65745:12123555]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [66830:11021973]
:POSTROUTING ACCEPT [68648:11114781]
COMMIT
# Completed on Sun Feb 19 03:22:10 2017
# Generated by ip6tables-save v1.4.21 on Sun Feb 19 03:22:10 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:IN_LOGNDROP - [0:0]
:OKICMP - [0:0]
:OUT_LOGNDROP - [0:0]
:SILENT_DROP - [0:0]
-A INPUT -p udp -m udp --dport 53 -m string --hex-string "|00ff0001|" --algo bm --to 65535 -m recent --set --name ip6dnsanyquery --rsource
-A INPUT -p udp -m udp --dport 53 -m string --hex-string "|00ff0001|" --algo bm --to 65535 -m recent --rcheck --seconds 60 --hitcount 5 --name ip6dnsanyquery --rsource -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s fc00::/7 -j SILENT_DROP
-A INPUT -p tcp -m tcp -m multiport --dports 23,445,1433,139,8080,80,443,3306,953,3128 -j SILENT_DROP
-A INPUT -p udp -m udp -m multiport --dports 51413,138,137,445 -j SILENT_DROP
-A INPUT -p tcp -m tcp -m multiport --dports 22,4242 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 54874:54880 -m state --state NEW -j ACCEPT
-A INPUT -p udp -m udp --dport 54874:54879 -m state --state NEW -j ACCEPT
-A INPUT -p udp -m udp -m multiport --dports 53 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 53 -m state --state NEW -j ACCEPT
-A INPUT -i lo -m state --state NEW -j ACCEPT
-A INPUT -p ipv6-icmp -j OKICMP
-A INPUT -j IN_LOGNDROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s LOCALIPADDRESS/128 -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -m state --state NEW -j ACCEPT
-A OUTPUT -j OUT_LOGNDROP
-A IN_LOGNDROP -m limit --limit 2/sec -j LOG --log-prefix "DENIED INBOUND: " --log-level 6
-A IN_LOGNDROP -j DROP
-A OKICMP -p ipv6-icmp -m icmp6 --icmpv6-type 1 -m comment --comment "allow Destination Unreachable" -j ACCEPT
-A OKICMP -p ipv6-icmp -m icmp6 --icmpv6-type 129/0 -m comment --comment "Allow Echo Reply" -j ACCEPT
-A OKICMP -p ipv6-icmp -m icmp6 --icmpv6-type 128/0 -m comment --comment "Allow Echo Request" -j ACCEPT
-A OKICMP -p ipv6-icmp -m icmp6 --icmpv6-type 3/0 -m comment --comment "Allow Time Exceeded type 0 - Time to Live exceeded" -j ACCEPT
-A OKICMP -p ipv6-icmp -m icmp6 --icmpv6-type 3/1 -m comment --comment "Allow Time Exceeded type 1 - Frag Reassembly" -j ACCEPT
-A OUT_LOGNDROP -m limit --limit 2/sec -j LOG --log-prefix "DENIED OUTBOUND: " --log-level 6
-A OUT_LOGNDROP -j DROP
-A SILENT_DROP -j DROP
COMMIT
# Completed on Sun Feb 19 03:22:10 2017
