iptables
# Generated by iptables-save v1.4.21 on Fri Feb 17 03:19:47 2017
*mangle
:PREROUTING ACCEPT [126003764:12402953451]
:INPUT ACCEPT [126003761:12402953049]
:FORWARD ACCEPT [3:402]
:OUTPUT ACCEPT [167767176:141628860067]
:POSTROUTING ACCEPT [167766277:141628804573]
COMMIT
# Completed on Fri Feb 17 03:19:47 2017
# Generated by iptables-save v1.4.21 on Fri Feb 17 03:19:47 2017
*raw
:PREROUTING ACCEPT [126003764:12402953451]
:OUTPUT ACCEPT [167767176:141628860067]
COMMIT
# Completed on Fri Feb 17 03:19:47 2017
# Generated by iptables-save v1.4.21 on Fri Feb 17 03:19:47 2017
*nat
:PREROUTING ACCEPT [53584494:6262953439]
:POSTROUTING ACCEPT [4570470:358831849]
:OUTPUT ACCEPT [4570470:358831849]
COMMIT
# Completed on Fri Feb 17 03:19:47 2017
# Generated by iptables-save v1.4.21 on Fri Feb 17 03:19:47 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:IN_LOGNDROP - [0:0]
:OKICMP - [0:0]
:OUT_LOGNDROP - [0:0]
:SILENT_DROP - [0:0]
-A INPUT -p udp -m udp --dport 53 -m string --hex-string "|00ff0001|" --algo bm --to 65535 -m recent --set --name dnsanyquery --rsource
-A INPUT -p udp -m udp --dport 53 -m string --hex-string "|00ff0001|" --algo bm --to 65535 -m recent --rcheck --seconds 60 --hitcount 5 --name dnsanyquery --rsource -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j SILENT_DROP
-A INPUT -s 172.16.0.0/12 -j SILENT_DROP
-A INPUT -s 192.0.2.0/24 -j SILENT_DROP
-A INPUT -s 192.168.0.0/16 -j SILENT_DROP
-A INPUT -s 198.51.100.0/24 -j SILENT_DROP
-A INPUT -s 203.0.113.0/24 -j SILENT_DROP
-A INPUT -p tcp -m tcp -m multiport --dports 23,445,1433,139,8080,80,443,3306,953 -j SILENT_DROP
-A INPUT -p udp -m udp -m multiport --dports 51413,138,137 -j SILENT_DROP
-A INPUT -p tcp -m tcp -m multiport --dports 22,4242 -m state --state NEW -m comment --comment "Allow SSH" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 30100 -m state --state NEW -m comment --comment "Allow connection to zabbix agent" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 54874:54880 -m state --state NEW -m comment --comment "Allow rtorrent" -j ACCEPT
-A INPUT -p udp -m udp --dport 54874:54879 -m state --state NEW -m comment --comment "Allow rtorrent" -j ACCEPT
-A INPUT -p udp -m udp -m multiport --dports 53 -m state --state NEW -m comment --comment "Allow DNS" -j ACCEPT
-A INPUT -p tcp -m tcp -m multiport --dports 53 -m state --state NEW -m comment --comment "Allow DNS" -j ACCEPT
-A INPUT -i lo -m state --state NEW -j ACCEPT
-A INPUT -p icmp -j OKICMP
-A INPUT -j IN_LOGNDROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 104.200.67.12/32 -m state --state NEW -j ACCEPT
-A OUTPUT -o lo -m state --state NEW -j ACCEPT
-A OUTPUT -j OUT_LOGNDROP
-A IN_LOGNDROP -m limit --limit 2/sec -j LOG --log-prefix "DENIED INBOUND: " --log-level 6
-A IN_LOGNDROP -j DROP
-A OKICMP -p icmp -m icmp --icmp-type 3 -m comment --comment "allow Destination Unreachable" -j ACCEPT
-A OKICMP -p icmp -m icmp --icmp-type 0/0 -m comment --comment "Allow Echo Reply" -j ACCEPT
-A OKICMP -p icmp -m icmp --icmp-type 8/0 -m comment --comment "Allow Echo Request" -j ACCEPT
-A OKICMP -p icmp -m icmp --icmp-type 11/0 -m comment --comment "Allow Time Exceeded type 0 - Time to Live exceeded" -j ACCEPT
-A OKICMP -p icmp -m icmp --icmp-type 11/1 -m comment --comment "Allow Time Exceeded type 1 - Frag Reassembly" -j ACCEPT
-A OUT_LOGNDROP -m limit --limit 2/sec -j LOG --log-prefix "DENIED OUTBOUND: " --log-level 6
-A OUT_LOGNDROP -j DROP
-A SILENT_DROP -j DROP
COMMIT
# Completed on Fri Feb 17 03:19:47 2017
